--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,14 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": ">=5.5.9",
-        "laravel/framework": "5.1.*",
-        "barryvdh/laravel-ide-helper": "^2.0",
-        "doctrine/dbal": "^2.5"
+        "php": ">=5.6",
+        "laravel/framework": "~5.1",
+        "barryvdh/laravel-ide-helper": "~2.0",
+        "doctrine/dbal": "~2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
-        "mockery/mockery": "0.9.*",
+        "mockery/mockery": "~0.9",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1"
     },
