--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6",
         "laravel/framework": "~5.1",
         "barryvdh/laravel-ide-helper": "~2.0",
-        "doctrine/dbal": "~2.5"
+        "doctrine/dbal": "~2.5",
+        "cviebrock/eloquent-sluggable": ">=3.0.0-beta"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
