--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "~5.1",
         "barryvdh/laravel-ide-helper": "~2.0",
         "doctrine/dbal": "~2.5",
-        "cviebrock/eloquent-sluggable": ">=3.0.0-beta"
+        "cviebrock/eloquent-sluggable": ">=3.0.0-beta",
+        "laravelcollective/html": "~5.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
