--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-ide-helper": "~2.0",
         "doctrine/dbal": "~2.5",
         "cviebrock/eloquent-sluggable": ">=3.0.0-beta",
-        "laravelcollective/html": "~5.1"
+        "laravelcollective/html": "~5.1",
+        "watson/bootstrap-form": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
